[tool.black]
line-length = 79
target-version = ["py36", "py37", "py38"]

[tool.poetry]
name = "flake8parser"
description = "A public python API for flake8 created by parsing the command line output."
version = "0.1.0"
authors = ["Alex M."]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/newAM/flake8parser"

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]
black = { version = "19.10b0", allow-prereleases = true }
coveralls = "^2.0.0"
flake8-bugbear = "^20.1.4"
flake8 = "^3.8.3"
pep8-naming = "^0.11.1"
pytest-cov = "^2.10.0"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
