[tool.black]
line-length = 79

[tool.poetry]
name = "flake8parser"
description = "A public python API for flake8 created by parsing the command line output."
version = "0.1.0"
authors = ["Alex M."]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/newAM/flake8parser"

[tool.poetry.dependencies]
python = "^3.8.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
coveralls = "^3.3.1"
flake8-bugbear = "^24.2.6"
flake8 = "^7.0.0"
pep8-naming = "^0.13.3"
pytest-cov = "^5.0.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
